# WebSocketReflectorX

./: Cargo.toml
.github/workflows/: build.yaml
android/: AndroidManifest.xml  README.md  build.sh  build_config.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: lib.rs  main.rs
crates/desktop/ui/: main-android.slint
crates/wsrx/src/: main.rs
windows/: setup.nsi
