[package]
authors.workspace      = true
description            = "Controlled TCP-over-WebSocket forwarding tunnel."
documentation          = "https://docs.rs/wsrx"
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "wsrx-desktop"
readme                 = "../../README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
wsrx = { path = "../wsrx" }

i-slint-backend-winit = { workspace = true }
slint                 = { workspace = true, features = ["backend-android-activity-06"] }
winit                 = { workspace = true }

directories      = { workspace = true }
local-ip-address = { workspace = true }
open             = { workspace = true }
sys-locale       = { workspace = true }
sysinfo          = { workspace = true }

async-compat       = { workspace = true }
bitflags           = { workspace = true }
once_cell          = { workspace = true }
rand               = { workspace = true }
rustls             = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }

axum              = { workspace = true }
chrono            = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util        = { workspace = true }
tower-http        = { workspace = true }

[build-dependencies]
build-target  = { workspace = true }
git-version   = { workspace = true }
rustc_version = { workspace = true }
slint-build   = { workspace = true }
winres        = { workspace = true }

[[bin]]
name = "wsrx-desktop"
path = "src/main.rs"

[package.metadata.bundle]
name = "WebSocketReflectorX"

category          = "Utilities"
copyright         = "Copyright (c) XDSEC"
deb_depends       = ["libc6", "libgcc-s1", "libssl-dev", "libstdc++6"]
identifier        = "org.xdsec.wsrx"
osx_url_schemes   = ["org.xdsec.wsrx"]
short_description = "Controlled TCP-over-WebSocket forwarding tunnel."

icon = [
  "../../arts/logo.png",
  "../../macos/WebSocketReflectorX.icns",
  "../../windows/WebSocketReflectorX.ico",
]

[lib]
name = "wsrx_desktop"
crate-type = ["cdylib", "rlib"]  # 必须有 cdylib 以生成 Android .so
path = "src/lib.rs"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"

[package.metadata.android]
# Android SDK 版本
target_sdk_version = 34
min_sdk_version = 21

# 应用图标
icon = "arts/logo.png"
# 资源文件夹 (指向包含所有资源的单一目录)
assets = "android/assets" # <-- 修改为单一字符串路径
manifest = "android/AndroidManifest.xml"
